footer styles done

--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,15 @@ h2 {
     margin-bottom: 1rem;
 }
 
+/* Footer Styles */
+footer {
+    background-color: #1a202c;
+    color: white;
+    text-align: center;
+    padding: 1rem 0;
+    margin-top: 2rem;
+}
+
 /* Home Page Styles */
 .me {
     display: flex;
@@ -86,7 +95,7 @@ h2 {
 
 .cta-button {
     display: inline-block;
-    background-color: #7b2cbf;
+    background-color: #3182ce;
     color: white;
     padding: 0.5rem 1rem;
     text-decoration: none;
@@ -95,5 +104,6 @@ h2 {
 }
 
 .cta-button:hover {
-    background-color: #5a189a;
+    background-color: #2c5282;
 }
+
