--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
 .container {
     width: 90%;
     max-width: 1200px;
-    margin: 50px auto;
+    margin: 0 auto;
     padding: 0 20px;
 }
 
@@ -42,6 +42,35 @@ body {
     line-height: 1.2;
 }
 
+/* Buttons
+-------------------------*/
+.button{
+    z-index: 0;
+    background: transparent;
+    border: 3px solid #191919;
+    justify-content: center;
+    color: #191919;
+    cursor: pointer;
+    display: flex;
+    width: 200px;
+    height: 50px;
+    line-height: 50px;
+    font-weight: 900;
+    letter-spacing: 3px;
+    font-family: 'Montserrat', sans-serif;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-size: 11px;
+    word-spacing: 1px;
+    transition: all 0.4s;
+}
+
+.button:hover{
+    color: #ffffff;
+    background: #191919;
+    border: 1px solid #191919;
+}
+
 
 /* Font Sizes*/
 .f-smaller{
@@ -65,7 +94,6 @@ body {
 
 .f-medium{
     font-size: 28px;
-
 }
 
 .f-expanded{
@@ -206,7 +234,6 @@ body {
     margin-bottom: 120px;
 }
 
-
 .sections{
     width: 100%;
     z-index:1;
@@ -302,15 +329,14 @@ footer {
 .me {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    text-align: center;
-    z-index: 9999;
-
+    align-items: start;
+    text-align: left;
+    margin-top: 50px;
 }
 
 .me img {
-    width: 200px;
-    height: 200px;
+    width: 100%;
+    height: 100%;
     margin-bottom: 1rem;
 }
 
@@ -483,7 +509,7 @@ button[type="submit"]:hover {
     }
 
     .me {
-        flex-direction: row;
+        flex-direction: column;
         text-align: left;
     }
 
@@ -509,6 +535,15 @@ button[type="submit"]:hover {
 }
 
 @media (min-width: 1024px) {
+    .me {
+        flex-direction: row;
+        text-align: left;
+    }
+
+    .me img {
+        margin-right: 2rem;
+    }
+
     .family-grid {
         grid-template-columns: repeat(3, 1fr);
     }
