--- a/styles.css
+++ b/styles.css
@@ -45,14 +45,13 @@ body {
 /* Buttons
 -------------------------*/
 .button{
-    z-index: 0;
     background: transparent;
     border: 3px solid #191919;
     justify-content: center;
     color: #191919;
     cursor: pointer;
     display: flex;
-    width: 200px;
+    width: 100%;
     height: 50px;
     line-height: 50px;
     font-weight: 900;
@@ -318,12 +317,31 @@ h2 {
 
 /* Footer Styles */
 footer {
-    background-color: #10002b;
+    background-color: #252525;
     color: white;
     text-align: center;
     padding: 1rem 0;
     margin-top: 2rem;
 }
+
+.footer-logo img{
+    width: 60px;
+    border-radius: 100%;
+}
+
+.footer-details p{
+    text-decoration: none;
+}
+
+.footer-details a{
+    text-decoration: none;
+}
+
+.footer-details a:hover{
+    text-decoration: none;
+    color: #fdcb1c;
+}
+
 
 /* Home Page Styles */
 .me {
@@ -338,20 +356,6 @@ footer {
     width: 100%;
     height: 100%;
     margin-bottom: 1rem;
-}
-
-.cta-button {
-    display: inline-block;
-    background-color: #3182ce;
-    color: white;
-    padding: 0.5rem 1rem;
-    text-decoration: none;
-    border-radius: 0.25rem;
-    margin-top: 1rem;
-}
-
-.cta-button:hover {
-    background-color: #2c5282;
 }
 
 /* Family Page Styles */
@@ -535,8 +539,12 @@ button[type="submit"]:hover {
 }
 
 @media (min-width: 1024px) {
+    .container {
+        max-width: 1600px;
+    }
+
     .me {
-        flex-direction: row;
+        flex-direction: column;
         text-align: left;
     }
 
@@ -554,5 +562,41 @@ button[type="submit"]:hover {
 
     .gallery {
         grid-template-columns: repeat(3, 1fr);
+    }
+
+    .button{
+        width: 200px;
+    }
+}
+
+@media (min-width: 1600px) {
+    .container {
+        max-width: 1600px;
+    }
+
+    .me {
+        flex-direction: row;
+        text-align: left;
+    }
+
+    .me img {
+        margin-right: 2rem;
+        width: 550px;
+    }
+
+    .family-grid {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .hobbies-grid {
+        grid-template-columns: repeat(4, 1fr);
+    }
+
+    .gallery {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .button{
+        width: 200px;
     }
 }
