--- a/styles.css
+++ b/styles.css
@@ -377,9 +377,10 @@ footer {
 }
 
 .family-member img {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
+    width: 100%;
+    height: auto;
+    border-radius: 0.5rem;
+
     margin-bottom: 1rem;
 }
 
