--- a/styles.css
+++ b/styles.css
@@ -460,10 +460,15 @@ label {
 }
 
 input, textarea {
-    width: 100%;
+    width: 97.5%;
     padding: 0.5rem;
     border: 1px solid #e2e8f0;
     border-radius: 0.25rem;
+}
+
+input:focus, textarea:focus {
+    border: 3px solid #191919;
+    outline: none;
 }
 
 button[type="submit"] {
@@ -474,7 +479,6 @@ button[type="submit"] {
     cursor: pointer;
     display: flex;
     width: 100%;
-    height: 50px;
     line-height: 50px;
     font-weight: 900;
     letter-spacing: 3px;
@@ -495,6 +499,8 @@ button[type="submit"]:hover {
 .social-links {
     list-style-type: none;
     padding-left: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 .social-links li {
@@ -509,7 +515,7 @@ button[type="submit"]:hover {
 }
 
 .social-links a:hover {
-    color: #3182ce;
+    color: #fdcb1c;
 }
 
 .social-links svg {
@@ -552,6 +558,14 @@ button[type="submit"]:hover {
     .contact-grid {
         grid-template-columns: repeat(2, 1fr);
     }
+
+    .social-links {
+        list-style-type: none;
+        padding-left: 0;
+        display: flex;
+        flex-direction: row;
+        gap: 1rem;
+    }
 }
 
 @media (min-width: 1024px) {
@@ -582,6 +596,14 @@ button[type="submit"]:hover {
 
     .button{
         width: 200px;
+    }
+
+    .social-links {
+        list-style-type: none;
+        padding-left: 0;
+        display: flex;
+        flex-direction: row;
+        gap: 1rem;
     }
 }
 
@@ -614,5 +636,13 @@ button[type="submit"]:hover {
 
     .button{
         width: 200px;
+    }
+
+    .social-links {
+        list-style-type: none;
+        padding-left: 0;
+        display: flex;
+        flex-direction: row;
+        gap: 1rem;
     }
 }
